# personnel_management

./: .clang-format  .env.example  .env.test  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  TESTING.md  build.sh  package.sh  test_app.sh
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  PACKAGING.md  QUICKSTART.md  TESTING_IMPLEMENTATION.md
include/: config.h
include/api/: apiclient.h
include/gui/: material3colors.h  personnelapp.h
include/models/: department.h  employee.h  salarygrade.h
resources/: fonts.qrc  resources.qrc
resources/qml/: main.qml
resources/qml/components/: IconButton.qml  MaterialButton.qml  MaterialCard.qml  MaterialComboBox.qml  MaterialIcon.qml  MaterialTextField.qml  SearchableEmployeeComboBox.qml  qmldir
resources/qml/dialogs/: ConfirmDialog.qml  DepartmentEditDialog.qml  qmldir
resources/qml/views/: DepartmentsView.qml  EmployeesView.qml  SalaryGradesView.qml
scripts/: build-windows-docker.sh  format.sh  populate_database.py
src/: main.cpp  main_no_qrc.cpp
src/api/: apiclient.cpp
src/gui/: material3colors.cpp  personnelapp.cpp
src/models/: department.cpp  employee.cpp  salarygrade.cpp
tests/: CMakeLists.txt  README.md  test_config.cpp  test_main.cpp  test_models.cpp
